# flatpak-portable-builder

./: CMakeLists.txt  README.md  flatpakmanifest.cpp  flatpakmanifest.h  main.cpp  mainwindow.cpp  mainwindow.h  org.kde.flatpack-portable-builder.appdata.xml  org.kde.flatpack-portable-builder.desktop  portableappinfo.h  wineconfigwidget.cpp  wineconfigwidget.h
